# HDR-Simple-Framework

./: CMakeLists.txt  LICENSE  README.md
doc/: HDRSimpleFramework.config  formatter.xml
doc/1/: evaluation.csv
doc/2/: evaluation.csv
doc/5/: evaluation.csv
doc/9/: evaluation.csv
scripts/: align.sh
src/: CMakeLists.txt  config.h
src/kernel/: CMakeLists.txt  ExposureValue.cpp  ExposureValue.hpp  GenericFrame.cpp  GenericFrame.hpp  HDRExposition.cpp  HDRExposition.hpp
src/kernel/HdrCreation/: CMakeLists.txt  HDRCreator-version_1.cpp  HDRCreator.cpp  HDRCreator.hpp  LuminanceProcessor.cpp  LuminanceProcessor.hpp
src/kernel/TonemappingOperators/dobrowolski15/: CMakeLists.txt  Dobrowolski15.cpp  Dobrowolski15.hpp
src/ui/: CMakeLists.txt  HdrSimpleFramework.cpp  HdrSimpleFramework.hpp  ProcessingEngine.cpp  ProcessingEngine.hpp  RealtimeEngine.cpp  RealtimeEngine.hpp
tests/: CMakeLists.txt  TestGeneralFrame.cpp  testArgs.hpp
tests/data/: .gitignore
