
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(FILES_HXX)
SET(FILES_CPP)

ADD_SUBDIRECTORY(external)
ADD_SUBDIRECTORY(kernel)
ADD_SUBDIRECTORY(ui)

SET(FILES_HXX ${FILES_HXX}
    ${CMAKE_CURRENT_SOURCE_DIR}/config.h
    PARENT_SCOPE
)

SET(FILES_CPP ${FILES_CPP}
    PARENT_SCOPE
)

SET(MODULES ${MODULES} PARENT_SCOPE)
