FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)

# workaround for http://code.google.com/p/googletest/issues/detail?id=408
IF(MSVC_VERSION EQUAL 1700)
ADD_DEFINITIONS(-D_VARIADIC_MAX=10)
ENDIF()

ENABLE_TESTING()
FIND_PACKAGE(GTest)

IF(GTEST_FOUND)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(FrameTestCase TestGeneralFrame.cpp)
TARGET_LINK_LIBRARIES(FrameTestCase
    ${GTEST_BOTH_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
      ${MODULES} ${LIBS})
ADD_TEST(FrameTestCase FrameTestCase)

ENDIF(GTEST_FOUND)
