INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(KFILES_HXX)
SET(KFILES_CPP)

ADD_SUBDIRECTORY(HdrCreation)
ADD_SUBDIRECTORY(TonemappingOperators/dobrowolski15)

SET(KFILES_HXX ${KFILES_HXX}
    ${CMAKE_CURRENT_SOURCE_DIR}/ExposureValue.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/HDRExposition.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericFrame.hpp
)

SET(KFILES_CPP ${KFILES_CPP}
    ${CMAKE_CURRENT_SOURCE_DIR}/ExposureValue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/HDRExposition.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericFrame.cpp
)

ADD_LIBRARY(HDRkernel ${KFILES_HXX} ${KFILES_CPP} ${CMAKE_SOURCE_DIR}/src/config.h)
TARGET_LINK_LIBRARIES(HDRkernel ${MODULES})

SET(MODULES HDRkernel ${MODULES} PARENT_SCOPE)
